[ADD]: add backCard dashboard. need to create new page for stats. also add translation for card3

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -40,7 +40,8 @@
     "dashboard": "Dashboard",
     "settings": "Settings",
     "settings_paragraph": "Here's an overview of all the available options to configure your profile and account.",
-    "settings_description": "In the settings, you can change your login, password, email, language preferences, and enable or disable two-factor authentication."
+    "settings_description": "In the settings, you can change your login, password, email, language preferences, and enable or disable two-factor authentication.",
+    "dashboard_description": "In the dashboard, you can view your statistics, track your progress, and access your recent games."
   },
   "login": {
     "login_page": "Login Page",
