--- a/frontend/src/locales/pt/translation.json
+++ b/frontend/src/locales/pt/translation.json
@@ -40,7 +40,8 @@
 		"dashboard": "Painel de controle",
 		"settings": "Configurações",
 		"settings_paragraph": "Aqui está uma visão geral de todas as opções disponíveis para configurar seu perfil e conta.",
-		"settings_description": "Nas configurações, você pode alterar seu login, senha, e-mail, preferências de idioma e ativar ou desativar a autenticação de dois fatores."
+		"settings_description": "Nas configurações, você pode alterar seu login, senha, e-mail, preferências de idioma e ativar ou desativar a autenticação de dois fatores.",
+		"dashboard_description": "No painel de controle, você pode visualizar suas estatísticas, acompanhar seu progresso e acessar suas partidas recentes."
 	},
 	"login": {
 		"login_page": "Página de login",
