[ADD]: translation for Landing.ts OK

--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -10,7 +10,7 @@
 		"register": "Inscription",
 		"login": "Connexion",
 		"play_pong": "Jouez au Pong.",
-		"have_fun": "Amusez-vous et développez vos compétences au pong.",
+		"have_fun": "Amusez-vous et développez vos compétences au Pong.",
 		"lvl_up": "Améliores vos compétences avec des jeux et des tournois.",
 		"start_playing": "Commencer à jouer",
 		"why_42": "Découvrez pourquoi les développeurs de 42 adorent Transcendence. 100% gratuit.",
