--- a/frontend/src/locales/pt/translation.json
+++ b/frontend/src/locales/pt/translation.json
@@ -10,7 +10,7 @@
 		"register": "Registrar",
 		"login": "Entrar",
 		"play_pong": "Jogue Pong.",
-		"have_fun": "Divirta-se. Melhore suas habilidades no tênis de mesa.",
+		"have_fun": "Divirta-se. Melhore suas habilidades no Pong.",
 		"lvl_up": "Aprimore suas habilidades com jogos e torneios.",
 		"start_playing": "Começar a jogar",
 		"why_42": "Descubra por que os desenvolvedores da 42 adoram o Transcendence. 100% gratuito.",
