[ADD]: translation for Login.ts OK - also need to add reload in navbar and landing

--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -48,7 +48,8 @@
 	"login": {
 		"login_page": "Page de connexion",
 		"click": "Cliquez ici",
-		"login": "Connexion"
+		"login": "Connexion",
+		"incorrect": "Email ou mot de passe incorrect"
 	},
 	"register": {
 		"ph_name": "prénom",
