--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -49,7 +49,8 @@
     "login_page": "Login Page",
     "click": "Click here",
     "login": "Login",
-    "status": "Login status:"
+    "status": "Login status:",
+		"incorrect": "Incorrect email or password"
   },
   "register": {
     "ph_name": "name",
