--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -71,31 +71,37 @@
 		"failed": "Erreur lors de l'inscription. Veuillez réessayer."
 	},
 	"dashboard": {
-    "loading": "Chargement...",
-    "placeholder": "Numéro de la partie",
-    "final_score": "Score final (JOUEUR - ADVERSAIRE)",
-    "tot_bounce": "Total de rebond (joueur)",
-    "tot_press": "Temps de pression continue sur les touches (en secondes)",
-    "not_found": "Partie non trouvée",
-    "stats": "Statistiques",
-    "total_games_played": "Total parties jouées",
-    "total_wins": "Total de victoires",
-    "total_losses": "Total de défaites",
-    "points_scored": "Nombre de points marqués",
-    "longest_win_streak": "Série de victoires la plus longue",
-    "loss_win_ratio": "Ratio défaites/victoires",
-    "most_played_friend": "Ami le plus affronté",
-    "win_rate_percent": "% de victoire",
-    "match_details": "Détails des parties",
-    "search": "Rechercher",
-	"score": "Score"
+		"loading": "Chargement...",
+		"placeholder": "Numéro de la partie",
+		"final_score": "Score final (JOUEUR - ADVERSAIRE)",
+		"tot_bounce": "Total de rebond (joueur)",
+		"tot_press": "Temps de pression continue sur les touches (en secondes)",
+		"not_found": "Partie non trouvée",
+		"stats": "Statistiques",
+		"total_games_played": "Total parties jouées",
+		"total_wins": "Total de victoires",
+		"total_losses": "Total de défaites",
+		"points_scored": "Nombre de points marqués",
+		"longest_win_streak": "Série de victoires la plus longue",
+		"loss_win_ratio": "Ratio défaites/victoires",
+		"most_played_friend": "Ami le plus affronté",
+		"win_rate_percent": "% de victoire",
+		"match_details": "Détails des parties",
+		"search": "Rechercher",
+		"score": "Score"
   },
   "friends": {
-  	"my_friends": "Mes Amis",
-	"add_friend_email_placeholder": "Email de l'ami à ajouter",
-	"add": "Ajouter",
-    "remove": "Supprimer",
-    "no_friends_yet": "Vous n'avez pas encore d'amis",
-    "no_friend_found": "Aucun ami trouvé"
+		"my_friends": "Mes Amis",
+		"add_friend_email_placeholder": "Email de l'ami à ajouter",
+		"add": "Ajouter",
+		"remove": "Supprimer",
+		"no_friends_yet": "Vous n'avez pas encore d'amis",
+		"no_friend_found": "Aucun ami trouvé"
+  },
+  "blockchain": {
+    "game_history": "Historique des parties Blockchain",
+    "date": "Date",
+    "opponent": "Adversaire",
+    "result": "Résultat"
   }
 }
